# uni

./: README.md
agu/: CMakeLists.txt  README.md  main.cpp
agu/algorithms/: convex_hull.cpp  convex_hull.h  plane_sweeping.cpp  plane_sweeping.h
agu/collections/: dictionary.cpp  dictionary.h  priority_queue.h
agu/excercises/: e1_polygons.cpp  e1_polygons.h  e2_plane_sweeping.cpp  e2_plane_sweeping.h  e3_convex_hull.cpp  e3_convex_hull.h
agu/types/: event_point.cpp  event_point.h  line.cpp  line.h  polygon.cpp  polygon.h  segment.cpp  segment.h
agu/utils/: generator.cpp  generator.h  visualizer.cpp  visualizer.h
ano1/: .gitignore  CMakeLists.txt  README.md
ano1/0-utils/: utils.h
ano1/1-derivatives/: CMakeLists.txt  main.cpp
ano1/2-laplace/: CMakeLists.txt  main.cpp
ano1/3-double-thresholding/: CMakeLists.txt  main.cpp
ano1/4-simple-obj-classifier/: CMakeLists.txt  classifier.cpp  classifier.h  main.cpp
ano1/4-simple-obj-classifier/structs/: color.cpp  color.h  group.cpp  group.h  shape.cpp  shape.h
ano1/5-mog/: CMakeLists.txt  gaussian.cpp  gaussian.h  main.cpp
ano2/: .gitignore  CMakeLists.txt  README.md
ano2-parking/: .gitignore  CMakeLists.txt  README.md  main.cpp
ano2-parking/core/: Place.cpp  Place.h
ano2-parking/data/: free.txt  full.txt  results_neural.txt  results_svm.txt  test.txt
ano2-parking/objdetect/: Classifier.cpp  Classifier.h
ano2-parking/utils/: Loader.cpp  Loader.h
ano2/1-object-detection/: CMakeLists.txt  main.cpp
bachelor-thesis/mobile/: index.android.js  index.ios.js  package.json
bachelor-thesis/mobile/android/: gradle.properties  settings.gradle
bachelor-thesis/mobile/app/: index.js
bachelor-thesis/web/: .gitignore  bower.json  gulpfile.js  package.json
bachelor-thesis/web/src/: db.sqlite3  manage.py
bia/: .gitignore  README.md  dependency-reduced-pom.xml  filename.txt  pom.xml
dzo/: .gitignore  CMakeLists.txt  README.md
dzo/1-basics/: CMakeLists.txt  main.cpp
dzo/10-perspective-transform/: CMakeLists.txt  main.cpp
dzo/11-retinex/: CMakeLists.txt  main.cpp
dzo/2-gamma-contrast-correction/: CMakeLists.txt  main.cpp
dzo/3-convolution/: CMakeLists.txt  convolution.h  main.cpp
dzo/4-anisotropic-filter/: CMakeLists.txt  main.cpp
dzo/5-discrete-fourier-transform/: CMakeLists.txt  dft.cpp  dft.h  main.cpp
dzo/6-inverse-discrete-fourier-transform/: CMakeLists.txt  dft.cpp  dft.h  main.cpp
dzo/7-dft-filters/: CMakeLists.txt  dft.cpp  dft.h  main.cpp
dzo/8-geometric-distortion/: CMakeLists.txt  main.cpp
dzo/9-histogram/: CMakeLists.txt  main.cpp
gpg/: .gitignore  CMakeLists.txt  README.md  main.cpp
gpg/embree/: errorchecks.cpp  errorchecks.h
gpg/geom/: material.cpp  objloader.cpp  objloader.h  omnilight.cpp  ray.h  surface.cpp  surface.h  texture.cpp  triangle.h  vertex.h
gpg/math/: color4.cpp  vector2.cpp  vector2.h  vector4.cpp
gpg/shaders/: shader.cpp  shader.h  shaderlambert.cpp  shaderlambert.h  shadernormal.cpp  shadernormal.h  shaderpathtracer.cpp  shaderpathtracer.h  shaderphong.cpp  shaderphong.h
gpg/tracing/: camera.cpp  cubemap.cpp  intersect.cpp  intersect.h  renderer.cpp  renderer.h
gpg/utils/: filters.cpp  filters.h  macros.h  timer.cpp  timer.h  utils.cpp  utils.h
gpg/web/: index.html
gpg/web/css/: main.css
gpg/web/js/: main.js  ui-handler.js
masters-thesis/data/shaders/: depth.vert
osmz/: .gitignore  README.md
osmz/BitmapTest/app/: CMakeLists.txt  build.gradle
osmz/Fractal/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
osmz/HTTPServer/: gradlew
osmz/HTTPServer/app/: build.gradle
osmz/MD5/app/: CMakeLists.txt  build.gradle
pa/: CMakeLists.txt  main.cpp
pa-java/: .gitignore
pa/algorithm/: lu.h  lu_cpp_11.cpp  lu_cpp_11.h  lu_open_mp.cpp  lu_open_mp.h
pa/types/: mat.cpp  mat.h
pa/utils/: usings.h
pg1/: CMakeLists.txt  README.md  main.cpp
pg1/data/: 6887_allied_avenger.mtl
pg1/embree/: structs.h
pg1/geom/: material.h  omnilight.h  ray.cpp  ray.h  texture.h  triangle.cpp  vertex.cpp
pg1/math/: color4.h  matrix4x4.cpp  matrix4x4.h  quaternion.cpp  quaternion.h  vector3.cpp  vector3.h  vector4.h
pg1/shaders/: shader.cpp  shader.h  shaderlambert.cpp  shaderlambert.h  shadernormal.cpp  shadernormal.h  shaderpathtracer.cpp  shaderpathtracer.h  shaderphong.cpp  shaderphong.h
pg1/tracing/: camera.cpp  camera.h  cubemap.h
pg1/utils/: timer.cpp
pg2/: config.del
pg2/Resources/shaders/: adsOBJ_v3_n3_t3.frag  adsOBJ_v3_n3_t3_displacement.cont  adsOBJ_v3_n3_t3_displacement.eval  adsOBJ_v3_n3_t3_displacement.vert  adsObj_v3_n3_t3_displacement.frag  adsObj_v3_n3_t3_normal.frag  adsObj_v3_n3_t3_normal.vert  adsObj_v3_n3_t3_parallax.frag  adsObj_v3_n3_t3_parallax_steep.frag  adsObj_v3_n3_t3_parallax_steep_interpol.frag  adsObj_v3_n3_t3_parallax_steep_interpol.vert  adsObj_v3_n3_t3_projection - Copy.frag  adsObj_v3_n3_t3_projection - Copy.vert  adsObj_v3_n3_t3_projection.frag  adsObj_v3_n3_t3_projection.vert  quad.vert  (+18 more)
pg2/TutorialsVSB/: TutorialsVSB.sln
pg2/common/: packages.props
pp/: .gitignore  README.md
pp/modern-cpp/: CMakeLists.txt  main.cpp  multithreading.h  test.h
pp/openmp/matrix-multiplication/: CMakeLists.txt  main.cpp  mat.cpp  mat.h  multiplication.cpp  multiplication.h  pp_matrix.xlsx  results.csv  timer.cpp  timer.h
pp/project/: loader.hs  machine  machine.hs  palindrom.tm  same.tm
vd/: CMakeLists.txt  main.cpp
vd/core/: synthetic_scene.cpp  synthetic_scene.h
vd/data/flow/: u00000.yml  u00001.yml  u00002.yml  u00003.yml  u00004.yml  u00005.yml  u00006.yml  u00007.yml  u00008.yml  u00009.yml  u00010.yml  u00011.yml  u00012.yml  u00013.yml  u00014.yml  u00015.yml  u00016.yml  u00017.yml  u00018.yml  u00019.yml  u00020.yml  u00021.yml  u00022.yml  u00023.yml  u00024.yml  u00025.yml  u00026.yml  u00027.yml  u00028.yml  u00029.yml  u00030.yml  u00031.yml  u00032.yml  u00033.yml  u00034.yml  u00035.yml  u00036.yml  u00037.yml  u00038.yml  u00039.yml  (+160 more)
vd/exercises/: aexercise.h  e1_cloud_scatter.cpp  e1_cloud_scatter.h  e2_flow.cpp  e2_flow.h  e3_depth.cpp  e3_depth.h
vd/utils/: utils.cpp  utils.h
(+452 files in other folders)
